app/assets/stylesheets/_portfolio-project.scss
body#portfolio {
  text-align: left;

  header {
    @extend .primary;

    h2 {
      float: left;
      font-family: $header;
      font-size: 60px;
      font-weight: 100;
      line-height: 60px;
      margin: 0 flex-gutter() lh(3) 0;
      width: flex-grid(7);

      a {
        border-bottom: 1px solid $red;
      }
    }

    .nav {
      float: right;
      margin-top: 23px;
      text-align: right;
      width: flex-grid(5);

      a {
        color: #555;
        font-style: italic;

        &.left {
          text-align: right;
        }

        &.right {
          margin-left: 2%;
        }

        &:hover {
          color: $red;
        }
      }
    }
  }

  > blockquote {
    @extend .secondary-wrapper;
    padding-bottom: lh(4);
    z-index: -1;

    &.summary {
      > div:before {
        content: none;
      }

      p {
        font-style: normal;
      }
    }

    > div {
      @extend .secondary;
      overflow: visible;
      position: relative;

      &:before {
        color: #c0c0c0;
        content: '\201c';
        font-size: 72px;
        font-weight: 700;
        left: - lh(1.66);
        line-height: 1em;
        position: absolute;
        top: - lh(.5);
        visibility: visible;
      }
    }

    p {
      font-family: $body;
      font-size: lh(1.5);
      font-style: italic;
      font-weight: 400;
      line-height: lh(2);
    }

    cite {
      display: block;
      margin-right: flex-gutter();
      position: absolute;

      p {
        font-size: 1rem;
        font-style: normal;
        line-height: lh();

        &.author {
          color: #555;
          font-weight: 800;
          margin-bottom: 0;
        }

        &.title {
          margin-top: 0;
        }
      }
    }
  }

  .case {
    display: inline-block;
    float: left;
    margin: lh(3) flex-gutter()*2 lh(2) 0;
    padding-top: lh(2);
    width: flex-grid(4) - flex-gutter();

    .jump {
      display: none;
      padding: lh() 0;
    }

    section {
      width: 100%;;
    }
  }

  .screenshots {
    margin-top: - lh(3);

    #screenshots {
      width: flex-grid(8);
      float: right;
    }

    img.screenshot {
      border: 1px solid white;
      @include box-shadow(0px 0px 0px 1px #ddd);
      float: left;
      margin-bottom: lh(3); 
      width: 100%;
    }

    img.triptych {
      border: 0;
      @include box-shadow(none);
    }

    a.iphone {
      float: left;
      margin-right: flex-gutter();
      width: flex-grid(6);
      margin-bottom: flex-gutter();

      &:nth-child(2n) {
        margin-right: 0;
      }

      img {
        margin-bottom: 0;
        width: 100%;
      }
    }
  }

  #get-started {
    clear: both;

    a {
      margin-top: lh();
    }
  }

  // old portfolio item nav styles
  .nav a {
    display: block;
    float: left;
    margin-bottom: 0;
    width: 48%;

    &.left {
      text-align: left;
    }

    &.right {
      float: right;
      text-align: right;
    }
  }

  @include media($small) {
    header {
      h2 {
        font-size: 24px;
        font-weight: 400;
        line-height: lh(1.4);
        margin: 0 0 lh(1.33) 0;
        text-align: center;
        width: 100%;
      }

      .nav {
        margin: 0 0 lh(1.33) 0;
        width: 100%;

        a {
          margin: 0;
          width: 48%;

          &.right {
            float: right;
            text-align: right;
          }
        }
      }
    }

    > blockquote {
      padding-top: lh();
      padding-bottom: lh();

      &.summary > div {
        padding-top: 0;
      }

      > div {
        padding-top: lh();

        &:before {
          left: 0;

        }
      }

      p {
        font-size: 100%;
        line-height: lh();
        margin-bottom: 0;
      }

      cite {
        margin-top: 24px;
        position: static;
      }
    }

    .case {
      display: block;
      float: none;
      margin: 0 0 lh(1.5) 0;
      padding: 0;
      width: 100%;

      .jump {
        display: block;
      }
    }

    .screenshots {
      margin-top: 0;

      #screenshots {
        width: 100%;
      }

      img.screenshot {
        float: none;
        margin-bottom: lh();
        width: 100%;
      }

      a.iphone {
        display: block;
        float: none;
        margin-bottom: lh();
        margin-right: 0;
        width: 100%;
      }
    }

    #get-started {
      border-bottom: 1px solid #ddd;
      margin-bottom: 0;
      padding-bottom: lh(1.5);
    }

    // old portfolio item nav styles
    #portfolio-slider {
      margin-top: 0;
      margin-bottom: 0;

      ul {
        margin: 0;
      }
    }

    .nav {
      margin: lh(1.5) 0;
      overflow: auto;
    }
  }
}

